Language selector fixes - z-index, scroll to overflow item

--- a/public/css/src/components/language-selector.less
+++ b/public/css/src/components/language-selector.less
@@ -7,7 +7,7 @@
     transition: 0.25s opacity;
     position: sticky;
     top: -1px;
-    z-index: 99999;
+    z-index: 5998;
     left: 0;
     right: 0;
 
